test/expected/declare_udc-error.out
c++decl> typedef int A4[4]
c++decl> declare user-defined conversion operator returning A4
                                                            ^
52: error: user-defined conversion operator return type "A4" (aka, "int[4]") can not be an array; did you mean pointer to array?
